--- a/package.json
+++ b/package.json
@@ -7,20 +7,36 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@shopify/restyle": "^2.1.0",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-maps": "0.30.2",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-web": "0.17.7",
+    "react-query": "^3.39.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-native": "^9.1.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "jest": "^28.1.1",
+    "jest-expo": "^45.0.1",
+    "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
   "private": true
